[gd_scene load_steps=12 format=2]

[ext_resource path="res://files/Fonts/Concert_One/ConcertOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://files/assets/uipack_fixed/PNG/grey_button01.png" type="Texture" id=2]
[ext_resource path="res://files/assets/uipack_fixed/PNG/grey_button02.png" type="Texture" id=3]
[ext_resource path="res://files/scenes/Menu/Main Menu.tres" type="DynamicFont" id=4]
[ext_resource path="res://files/assets/kenney_scribbleplatformer/PNG/Default/character_roundRed.png" type="Texture" id=5]
[ext_resource path="res://files/tilesets/grass.tres" type="TileSet" id=6]
[ext_resource path="res://files/scenes/Menu/Buttons.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "fade_in"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Title:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:custom_fonts/font:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 0.5, 1.68179, 1 ),
"update": 0,
"values": [ 100, 125, 100 ]
}

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="Main Menu" type="Node2D"]
position = Vector2( -537.402, -67.8823 )
scale = Vector2( 1.5, 1.5 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 385.827
margin_top = 55.6569
margin_right = 1610.83
margin_bottom = 153.657
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A SIMPLE PLATFORMER"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )
anims/scale = SubResource( 3 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -1112.51, -453.303 )
scale = Vector2( 2, 2 )
script = ExtResource( 7 )

[node name="Play" type="TouchScreenButton" parent="Node2D"]
position = Vector2( 1100, 345 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )

[node name="Play" type="Label" parent="Node2D/Play"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -15.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PLAY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TouchScreenButton" parent="Node2D"]
position = Vector2( 1100, 450 )
normal = ExtResource( 2 )
pressed = ExtResource( 3 )

[node name="Options" type="Label" parent="Node2D/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -4.71405
margin_top = -8.48531
margin_right = -4.71405
margin_bottom = -8.48531
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "OPTIONS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="character_roundRed" type="Sprite" parent="."]
position = Vector2( 554.186, 623.969 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 60, 59 )
format = 1
tile_data = PoolIntArray( 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1878.0
margin_bottom = 905.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Timer" parent="."]
wait_time = 0.5

[node name="Options" type="Timer" parent="."]
wait_time = 0.5
[connection signal="pressed" from="Node2D/Play" to="Node2D" method="_on_Play_pressed"]
[connection signal="pressed" from="Node2D/Options" to="Node2D" method="_on_Options_pressed"]
[connection signal="timeout" from="Play" to="Node2D" method="_on_Play_timeout"]
[connection signal="timeout" from="Options" to="Node2D" method="_on_Options_timeout"]
